--- a/lesson5_homework/app/src/main/res/layout/activity_main.xml
+++ b/lesson5_homework/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
         app:layout_constraintTop_toBottomOf="@+id/sign_in_top"
         app:layout_constraintVertical_bias="1.0" />
 
-    <com.google.android.material.textfield.TextInputEditText
+    <EditText
         android:id="@+id/email"
         android:layout_width="0dp"
         android:layout_height="40dp"
@@ -76,7 +76,7 @@
         app:layout_constraintTop_toBottomOf="@+id/sign_in_top"
         app:layout_constraintVertical_bias="0.0" />
 
-    <com.google.android.material.textfield.TextInputEditText
+    <EditText
         android:id="@+id/password"
         style="@style/Widget.AppCompat.EditText"
         android:layout_width="0dp"
@@ -87,7 +87,7 @@
         android:layout_marginBottom="8dp"
         android:background="@drawable/edit_text_background"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
