--- a/lesson7_8_CV_Builder/app/src/main/res/layout/fragment_contact.xml
+++ b/lesson7_8_CV_Builder/app/src/main/res/layout/fragment_contact.xml
@@ -14,6 +14,7 @@
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_horizontal_margin"
+            android:layout_marginBottom="50dp"
             android:layout_height="wrap_content"
             app:cardCornerRadius="7dp"
             app:cardElevation="22dp">
